@startuml
skinparam classAttributeIconSize 0
hide circle

title ListCommand Class Diagram

abstract class "<<abstract>>\nCommand" as Command {
    + execute(inventory: Inventory, ui: Ui)
}

class ListCommand {
    - {static} logger: Logger
}

class Inventory {
    - items: Map<String, InventoryItem>
}

class InventoryItem {
    - name: String
    - unit: String
    - minimumThreshold: int
    - batchQuantity: int
    - batches: List<Batch>
}

class Batch {
    - batchNumber: int
    - quantity: int
    - expiryDate: LocalDate
    - isExpired: boolean
}

class Ui

ListCommand -|> Command

ListCommand ..> Inventory
ListCommand ..> Ui

Ui .> Inventory
Ui .> InventoryItem
Ui ..> Batch

Inventory "1" -> "*" InventoryItem : stores >
InventoryItem "1" -> "*" Batch : stores >

@enduml